--- a/.gitignore
+++ b/.gitignore
@@ -691,3 +691,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,jetbrains,visualstudio
+
+
+data/**
