Ignore pyenv version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.python-version
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,jetbrains,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,jupyternotebooks,jetbrains,visualstudio
